# core

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  COPYING  INSTALL.md  README.md  RUN_TESTNET.md  autogen.sh  build.dockerfile  buildbase.dockerfile  buildnc.dockerfile  changelog.md  cmake_install.cmake  common.mk  configure.ac  developeredition.dockerfile  entrypoint-pg.sh  entrypoint.sh  generateXDR.sh  healthcheck.go  legacy.dockerfile  pg-entrypoint.sh  pg.dockerfile  pgnc.dockerfile  runTest.sh  stellar.cbp  testDBPrepare.sh  useful-tokend-stellar-diff.patch  werf-giterminism.yaml  werf.yaml
Builds/VisualStudio2015/: stellar-core.vcxproj  (+1 more)
bootstrap/: init.yml  run.yml
docs/: changes.md  configs.md  decentralized_exchange.md  example.core.ini  fuzzing.md  history.md  integration.md  ledger.md
lib/: CMakeLists.txt  cmake_install.cmake  libs.cbp
lib/cpp-serialize/: CMakeLists.txt  README.md
lib/cpp-serialize/src/: marshaler.cpp  marshaler.h  marshaler.t.hpp  measurer.cpp  measurer.h  measurer.t.hpp  types.cpp  types.h  unmarshaler.cpp  unmarshaler.h  unmarshaler.t.hpp  xdr_abstract.h
lib/cpp-serialize/test/: CreateAccountOp.cpp  CreateAccountOp.h  ManageSignerOp.cpp  ManageSignerOp.h  main.cpp  types.cpp  types.h
lib/cpp-serialize/xdrpp/: CMakeLists.txt  build_endian.h  build_endian.h.in  marshal.cpp  marshal.h  message.h  printer.h  types.h
src/: CMakeLists.txt  Makefile.am  StellarCoreVersion.h  cmake_install.cmake  core.cbp  platform_definitions.cmake  platform_include.cmake  platform_libs.cmake
(+1420 files in other folders)
